Ready for submission

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ plz
 postleitzahlen.geojson
 Stadtteile_DUS.geojson
 rent_prices_DUS_plz.html
+Understanding the Rent Prices in Düsseldorf Germany.pptx
+Understanding the Rent Prices in Düsseldorf Germany.pdf
+Jupyter Notebooke - Understanding the Rent Prices in DUS.pdf
